# replaceword

./: .gdbinit  Cargo.toml  Makefile.toml  README.md  output.docx
src/: lib.rs  lib_old.rs  read_paragraphs.rs  translation.rs  utils.rs  variable_substitution.rs  write_paragraphs.rs
tests/: modelo.dotx
tests/output/: doctest.doc  documento_final.doc  documento_final.docx  ~$cumento_final.doc
