[package]
name = "wordreplacelib"
version = "0.1.9"
edition = "2021"

[dependencies]
docx-rs = "0.4.17"
zip = "2.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.6"
thiserror = "1.0"
xml = "0.8"
chrono = "0.4.38"
chrono-tz = "0.9.0"
sys-locale = "0.3.1"
tempfile = "3.12.0"
once_cell = "1.19.0"
